fix: Align color form controls and labels

--- a/css/styles.css
+++ b/css/styles.css
@@ -195,3 +195,21 @@ body {
     width: 0;
     height: 0;
 }
+
+.aligned-form {
+    display: table;
+    min-width: 100%;
+    padding: 5px 10px;
+    box-sizing: border-box;
+}
+
+.aligned-form .grid-input-container {
+    display: table-row;
+}
+
+.aligned-form label,
+.aligned-form input {
+    display: table-cell;
+    margin: 2px;
+    text-align: left;
+}
